--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 
 main {
   margin: 0 auto;
-  width: 300px;
+  min-width: 300px;
+  max-width: 300px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -58,6 +59,7 @@ main {
   grid-template-columns: 8fr 1fr 1fr 1fr;
   background-color: whitesmoke;
   transition: 0.2s ease;
+  max-width: 100%;
 }
 
 .editing {
