--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: rgb(109, 134, 109);
-  font-size: 120%;
 }
 
 body {
@@ -15,10 +14,13 @@ body {
   height: 100vh;
 }
 
+.list-control.hidden > * {
+  display: none;
+}
+
 main {
   margin: 0 auto;
-  min-width: 300px;
-  max-width: 300px;
+  max-width: 500px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -34,7 +36,12 @@ main {
   outline: none;
 }
 
-.sort-items select {
+.list-control {
+  font-size: 1rem;
+}
+
+select,
+option {
   outline: none;
   cursor: pointer;
 }
@@ -59,7 +66,6 @@ main {
   grid-template-columns: 8fr 1fr 1fr 1fr;
   background-color: whitesmoke;
   transition: 0.2s ease;
-  max-width: 100%;
 }
 
 .editing {
