--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+  --background: rgb(112, 71, 46);
+  --font-primary: white;
+  --font-secondary: black;
+  --form-bg: whitesmoke;
+  --form-editing: rgb(216, 169, 184);
+  --btn-primary: rgb(103, 103, 155);
+  --btn-secondary: rgb(81, 141, 79);
+  --btn-tertiary: rgb(170, 76, 76);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,75 +17,176 @@
 
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: rgb(109, 134, 109);
+  background-color: var(--background);
 }
 
 body {
   max-width: 100vw;
   height: 100vh;
-}
-
-.list-control.hidden > * {
-  display: none;
+  background-image: url(./img/bg-wood.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 main {
   margin: 0 auto;
-  max-width: 500px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  padding-top: 50px;
+  width: 320px;
+  display: grid;
+}
+
+/* ////////////////////////
+        COMMON
+//////////////////////// */
+
+p,
+label {
+  color: var(--font-primary);
+  font-size: 1.1rem;
 }
 
 .btn {
   cursor: pointer;
+  border: none;
+  font-size: 1.2rem;
+}
+
+/* ////////////////////////
+     NEW ITEM SECTION
+//////////////////////// */
+
+.new-item-form {
+  width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: var(--form-bg);
+  display: grid;
+  grid-template-columns: 9fr 1fr;
+  align-items: center;
 }
 
 .new-item-text {
   outline: none;
+  background-color: var(--form-bg);
+  border: none;
+  font-size: 1.2rem;
+  padding: 0 0.5rem 0 0.5rem;
 }
+
+.new-item-btn {
+  background-color: var(--btn-primary);
+  color: var(--form-bg);
+}
+
+/* ////////////////////////
+    LIST CONTROL SECTION
+//////////////////////// */
 
 .list-control {
-  font-size: 1rem;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: 2fr 1fr;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem 0 0.2rem 0;
+  margin: 1rem 0 0 0;
+}
+.list-control.hidden > * {
+  display: none;
 }
 
-select,
-option {
+.list-length {
+  grid-column: 1 / span 2;
+  grid-row: 2;
+  margin-left: 0.5rem;
+  /* border: 1px solid red; */
+  justify-self: flex-start;
+}
+
+select {
   outline: none;
   cursor: pointer;
+  font-size: 1.1rem;
 }
 
-/* .error {
-  border: 2px solid red;
-  background-color: pink;
-} */
-
-.list-control {
-  display: flex;
+.filter-items {
+  grid-column: 1 / span 7;
+  grid-row: 1;
+  /* border: 1px solid red; */
+  justify-self: center;
 }
+
+.delete-items {
+  grid-column: 5 / span 3;
+  grid-row: 2;
+  /* border: 1px solid red; */
+  justify-self: flex-end;
+}
+
+/* ////////////////////////
+      LIST SECTION
+//////////////////////// */
 
 .list {
   display: grid;
   gap: 5px;
+  width: 100%;
 }
 
 .list-item {
   word-break: break-all;
   display: grid;
-  grid-template-columns: 8fr 1fr 1fr 1fr;
-  background-color: whitesmoke;
+  grid-template-columns: 1fr 7fr 1fr 1fr;
+  min-height: 1.8rem;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.list-item-text {
+  background-color: var(--form-bg);
+  font-size: 1.2rem;
+  padding: 0 0.5rem 0 0.5rem;
   transition: 0.2s ease;
 }
-
-.editing {
-  background-color: rgb(201, 182, 185);
+.list-item-text.editing {
+  background-color: var(--form-editing);
+  outline: none;
 }
 
-.completed {
+.list-item.completed {
   opacity: 0.5;
 }
 .completed .list-item-text {
   text-decoration: line-through;
+}
+.completed .btn-edit {
+  cursor: initial;
+}
+
+/* ////////////////////////
+    LIST ITEM BTNS
+//////////////////////// */
+
+/* colors */
+.list-item .btn-complete {
+  background-color: var(--btn-secondary);
+}
+.list-item .btn-delete {
+  background-color: var(--btn-tertiary);
+}
+.list-item .btn-edit {
+  background-color: var(--btn-primary);
+}
+/* hover opacity */
+.list-item .btn {
+  opacity: 0.8;
+  transition: 0.2s ease;
+}
+.list-item .btn:hover {
+  opacity: 1;
+}
+/* exception for .btn-edit */
+.completed .btn-edit:hover {
+  opacity: 0.8;
 }
