--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 :root {
-  --background: #261c2c;
+  /* DARK THEME */
+  /* --background: #261c2c;
   --font-primary: whitesmoke;
   --form-bg: #3e2c41;
-  --btn-new: #5c527f;
-  --btn-complete: #6e85b2;
-  --btn-delete: #b32b5a;
+  --btn-primary: #6e85b2;
+  --btn-secondary: #5c527f;
+  --btn-delete: #b32b5a; */
+
+  --background: #5d5b6a;
+  --font-primary: black;
+  --font-secondary: whitesmoke;
+  --form-bg: #cfb495;
+  --btn-primary: #6f8d7e;
+  --btn-secondary: #b68f6d;
+  --btn-delete: #d36174;
 }
 
 * {
@@ -38,7 +47,7 @@ main {
 
 p,
 label {
-  color: var(--font-primary);
+  color: var(--font-secondary);
   font-size: 1.1rem;
 }
 
@@ -48,7 +57,7 @@ label {
   font-size: 1.2rem;
   width: 100%;
   height: 100%;
-  opacity: 0.8;
+  /* opacity: 0.9; */
   transition: 0.1s;
 }
 .btn:hover {
@@ -78,9 +87,12 @@ label {
   font-size: 1.2rem;
   padding: 0 0.5rem 0 0.5rem;
 }
+/* .new-item-text::placeholder {
+  color: var(--font-primary);
+} */
 
 .new-item-btn {
-  background-color: var(--btn-new);
+  background-color: var(--btn-secondary);
   color: var(--form-bg);
 }
 
@@ -91,7 +103,6 @@ label {
 .list-control {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  align-content: center;
   width: 100%;
   height: 2rem;
   margin: 1rem 0;
@@ -107,20 +118,21 @@ select {
   background-color: var(--form-bg);
   color: var(--font-primary);
   border-radius: 5px;
+  border: 1px solid var(--font-primary);
 }
 
 .list-length {
   grid-column: 1 / 3;
   grid-row: 1;
   justify-self: center;
-  /* align-self: center; */
+  align-self: center;
 }
 
 .filter-items {
   grid-column: 3 / 10;
   grid-row: 1;
   justify-self: flex-end;
-  /* align-self: center; */
+  align-self: center;
   padding-right: 1rem;
 }
 
@@ -157,13 +169,13 @@ select {
 }
 
 .list-item .btn-complete {
-  background-color: var(--btn-complete);
+  background-color: var(--btn-primary);
 }
 .list-item .btn-delete {
   background-color: var(--btn-delete);
 }
 .list-item .btn-edit {
-  background-color: var(--btn-new);
+  background-color: var(--btn-secondary);
 }
 
 .list-item-text {
@@ -172,7 +184,8 @@ select {
   transition: 0.2s ease;
 }
 .list-item-text.editing {
-  background-color: var(--background);
+  background-color: var(--btn-secondary);
+  color: var(--font-secondary);
   outline: none;
 }
 
