--- a/style.css
+++ b/style.css
@@ -1,19 +1,22 @@
 :root {
   /* DARK THEME */
-  /* --background: #261c2c;
-  --font-primary: whitesmoke;
-  --form-bg: #3e2c41;
-  --btn-primary: #6e85b2;
-  --btn-secondary: #5c527f;
-  --btn-delete: #b32b5a; */
 
-  --background: #5d5b6a;
+  --background: #221927;
+  --font-primary: whitesmoke;
+  --font-secondary: black;
+  --form-bg: #554358;
+  --btn-primary: #7ab392;
+  --btn-secondary: #5c527f;
+  --btn-delete: #c0436f;
+
+  /* LIGHT THEME */
+
+  /* --background: #5d5b6a;
   --font-primary: black;
-  --font-secondary: whitesmoke;
   --form-bg: #cfb495;
   --btn-primary: #6f8d7e;
   --btn-secondary: #b68f6d;
-  --btn-delete: #d36174;
+  --btn-delete: #d36174; */
 }
 
 * {
@@ -35,21 +38,17 @@ body {
 main {
   margin: 0 auto;
   padding-top: 50px;
-  width: 80vw;
+  width: 95vw;
   max-width: 500px;
   display: grid;
+  gap: 2rem;
   color: var(--font-primary);
+  line-height: 2rem;
 }
 
 /* ////////////////////////
         COMMON
 //////////////////////// */
-
-p,
-label {
-  color: var(--font-secondary);
-  font-size: 1.1rem;
-}
 
 .btn {
   cursor: pointer;
@@ -57,7 +56,7 @@ label {
   font-size: 1.2rem;
   width: 100%;
   height: 100%;
-  /* opacity: 0.9; */
+  opacity: 0.9;
   transition: 0.1s;
 }
 .btn:hover {
@@ -69,14 +68,14 @@ label {
 //////////////////////// */
 
 .new-item-form {
-  width: 100%;
+  /* width: 100%; */
+  justify-self: center;
   height: 2rem;
   border-radius: 5px;
   overflow: hidden;
   background-color: var(--form-bg);
   display: grid;
   grid-template-columns: 9fr 1fr;
-  align-items: center;
 }
 
 .new-item-text {
@@ -85,15 +84,17 @@ label {
   color: var(--font-primary);
   border: none;
   font-size: 1.2rem;
-  padding: 0 0.5rem 0 0.5rem;
+  padding: 0 0.5rem;
 }
-/* .new-item-text::placeholder {
+.new-item-text::placeholder {
   color: var(--font-primary);
-} */
+  opacity: 0.4;
+}
 
 .new-item-btn {
   background-color: var(--btn-secondary);
-  color: var(--form-bg);
+  color: var(--font-primary);
+  font-size: 1.8rem;
 }
 
 /* ////////////////////////
@@ -105,46 +106,51 @@ label {
   grid-template-columns: repeat(10, 1fr);
   width: 100%;
   height: 2rem;
-  margin: 1rem 0;
+  font-size: 1.2rem;
 }
 .list-control.hidden > * {
   display: none;
 }
 
-select {
-  outline: none;
-  cursor: pointer;
-  font-size: 1.1rem;
-  background-color: var(--form-bg);
-  color: var(--font-primary);
-  border-radius: 5px;
-  border: 1px solid var(--font-primary);
-}
-
 .list-length {
   grid-column: 1 / 3;
-  grid-row: 1;
-  justify-self: center;
+  justify-self: flex-start;
   align-self: center;
+  background-color: var(--btn-primary);
+  color: var(--font-secondary);
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .filter-items {
   grid-column: 3 / 10;
-  grid-row: 1;
   justify-self: flex-end;
-  align-self: center;
+  align-self: stretch;
   padding-right: 1rem;
+}
+select {
+  outline: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  background-color: var(--form-bg);
+  color: var(--font-primary);
+  border-radius: 5px;
+  border: none;
+  height: 100%;
 }
 
 .delete-items {
   grid-column: 10;
-  grid-row: 1;
   justify-self: center;
   background-color: var(--btn-delete);
   border-radius: 5px;
 }
 .delete-items.inactive {
-  opacity: 0.2;
+  opacity: 0.3;
   cursor: initial;
 }
 
@@ -159,7 +165,6 @@ select {
 }
 
 .list-item {
-  word-break: break-all;
   display: grid;
   grid-template-columns: 1fr 7fr 1fr 1fr;
   min-height: 2rem;
@@ -179,13 +184,13 @@ select {
 }
 
 .list-item-text {
+  word-break: break-all;
   font-size: 1.2rem;
-  padding: 0 0.5rem 0 0.5rem;
+  padding: 0 0.5rem;
   transition: 0.2s ease;
 }
 .list-item-text.editing {
   background-color: var(--btn-secondary);
-  color: var(--font-secondary);
   outline: none;
 }
 
