--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ main {
   margin: 0 auto;
   padding-top: 50px;
   width: 95vw;
+  min-width: 300px;
   max-width: 500px;
   display: grid;
   gap: 2rem;
@@ -70,7 +71,7 @@ main {
 .new-item-form {
   /* width: 100%; */
   justify-self: center;
-  height: 2rem;
+  height: 2.5rem;
   border-radius: 5px;
   overflow: hidden;
   background-color: var(--form-bg);
@@ -105,7 +106,6 @@ main {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   width: 100%;
-  height: 2rem;
   font-size: 1.2rem;
 }
 .list-control.hidden > * {
@@ -160,14 +160,14 @@ select {
 
 .list {
   display: grid;
-  gap: 0.5rem;
+  gap: 0.75rem;
   width: 100%;
 }
 
 .list-item {
   display: grid;
   grid-template-columns: 1fr 7fr 1fr 1fr;
-  min-height: 2rem;
+  min-height: 2.5rem;
   border-radius: 5px;
   overflow: hidden;
   background-color: var(--form-bg);
@@ -186,6 +186,7 @@ select {
 .list-item-text {
   word-break: break-all;
   font-size: 1.2rem;
+  line-height: 2.5rem;
   padding: 0 0.5rem;
   transition: 0.2s ease;
 }
